usersc/css/custom.css
body,html{margin:2;padding:0;color:#000;background:#eee;font:12pt Verdana,Sans;}
#wrap{width:1024px;margin:0 auto;background:#fff;}
#header{padding:10px 0 0 10px;float:left;}
h1{margin:0;}
.login{float:right;padding:10px 10px 0 10px;font:8pt Verdana,Sans;}
.polaroid{margin:0 0 10px 10px;background-color:#fff;padding:10px;border-top:1px solid #999;border-right:2px solid #555;border-bottom:2px solid #555;border-left:1px solid #999;z-index:9999;}
#navcontainer ul{padding-left:0;margin-left:0;background-color:#036;color:White;float:left;width:100%;font-family:arial,helvetica,sans-serif;}
#navcontainer ul li{display:inline;}
#navcontainer ul li a{padding:.2em 1em;background-color:#036;color:White;text-decoration:none;float:left;border-right:1px solid #fff;}
#navcontainer ul li a:hover{background-color:#369;color:#fff;}
#main{float:left;width:99%;padding:10px;}
#leftside{float:left;width:48%;padding:10px;}
h2{margin:0 0 1em;}
#rightside{float:right;width:48%;padding:10px;}
#footer{clear:both;padding:5px 10px;border-top:thin solid #036;text-align:right;font:7pt Verdana,Sans;}
#footer p{margin:0;}
* html #footer{height:1px;}
* table.pme-main{border:#000000 1px solid;border-collapse:collapse;padding:2px;border-spacing:1px;font:8pt Verdana,Sans;width:100%;}
* th.pme-main{border:#000000 1px solid;border-collapse:collapse;padding:2px;border-spacing:1px;font:8pt Verdana,Sans;}
* th.pme-header{border:#000000 1px solid;padding:2px;background:#d4d4d4;font:8pt Verdana,Sans;text-align:left;font-weight:bold;}
* td.pme-filter,.pme-filter,.pme-filter-right-align{border:1px #c0c0c0 solid;padding:1px;background:#e6e6e6;color:#006;font:8pt Verdana,Sans;text-align:center;}
* .pme-sortinfo,.pme-queryinfo{border:0 #000000 solid;padding:1px;background:#fff;color:#006;font:8pt Verdana,Sans;text-align:center;}
* input.pme-filter,input.pme-filter-right-align{border:#c0c0c0 1px solid;padding:1px;background:#fff;color:#006;font:8pt Verdana,Sans;text-align:center;}
* input.pme-input-0,input.pme-input-1{border:#c0c0c0 0 solid;padding:1px;background:#fff;border:1px #dcdcdc solid;color:#000;font:8pt Verdana,Sans;}
* textarea.pme-input-0,textarea.pme-input-1{border:#c0c0c0 0 solid;padding:1px;background:#fff;border:1px #dcdcdc solid;color:#000;font:8pt Verdana,Sans;}
* select.pme-input-0,select.pme-input-1{border:#c0c0c0 0 solid;padding:1px;background:#fff;border:1px #dcdcdc solid;color:#000;font:8pt Verdana,Sans;}
* table.pme-navigation{border:#000000 0 solid;padding:1px;background:#fff;border:0;border-spacing:1px;font:8pt Verdana,Sans;}
* tr.pme-navigation{border:#000000 0 solid;padding:1px;background:#fff;border:0;border-spacing:0;font:8pt Verdana,Sans;}
* a.pme-navigation-0,a.pme-navigation-0:hover,td.pme-navigation-0{border:#404040 0 solid;padding:1px;background:#e0e0e0;font:8pt Verdana,Sans;text-align:center;}
* td.pme-cell-0{border:#000000 0 solid;padding:2px;background:#f5f5f5;font:8pt Verdana,Sans;}
* a.pme-navigation-1,a.pme-navigation-1:hover,td.pme-navigation-1{border:#fff 0 solid;padding:1px;background:#d0d0d0;font:8pt Verdana,Sans;text-align:center;}
* td.pme-cell-1{border:#000000 0 solid;padding:2px;background:#e0e0e0;font:8pt Verdana,Sans;}
* td.pme-key-0{border:#000000 0 solid;padding:2px;background:#e4e4e4;font:8pt Verdana,Sans;font-weight:bold;}
* td.pme-key-1{border:#000000 0 solid;padding:2px;background:#e9e9e9;font:8pt Verdana,Sans;font-weight:bold;}
* td.pme-value-0-right-align,td.pme-value-0{border:#000000 0 solid;padding:2px;background:#f5f5f5;font:8pt Verdana,Sans;text-align:left;}
* td.pme-value-1-right-align,td.pme-value-1{border:#000000 0 solid;padding:2px;background:#e0e0e0;font:8pt Verdana,Sans;text-align:left;}
* td.pme-help-0-right-align,td.pme-help-0{border:#000000 0 solid;padding:2px;background:#e4e4e4;font:8pt Verdana,Sans;font-weight:bold;text-align:left;}
* td.pme-help-1-right-align,td.pme-help-1{border:#000000 0 solid;padding:2px;background:#e9e9e9;font:8pt Verdana,Sans;font-weight:bold;text-align:left;}
* .pme-add,.pme-change,.pme-save,.pme-copy,.pme-delete,.pme-cancel,.pme-view,.pme-more,.pme-query,.pme-hide,.pme-search,.pme-first,.pme-prev,.pme-next,.pme-goto,.pme-clear,.pme-last{font:7pt Verdana,Sans;text-align:center;padding:2px;}
* td.pme-buttons{border:#000000 0 solid;background:#fff;color:#006;font:8pt Verdana,Sans;text-align:left;}
* td.pme-message{text-align:center;font:8pt Verdana,Sans;}
* td.pme-stats{text-align:right;font:8pt Verdana,Sans;}
* hr.pme-hr{color:#f8f8f8;border:1px solid;padding:1px;margin:0;border-top-width:1px;height:1px;}
* a.pme-tab{background:#fff url("../images/arrow.gif") top left no-repeat;padding-left:25px;color:#010101;}
* a.pme-tab-selected{background:#fff url("../images/arrow.gif") top left no-repeat;padding-left:25px;color:#369;}

